scripts/nullaway/nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8.txt
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/Main.java:32: error: [NullAway] dereferenced expression Singleton_doublecheck.getInstance() is @Nullable
        Singleton_doublecheck.getInstance().sayHello();
                                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/Main.java:67: error: [NullAway] @NonNull field Main$Person.datiqingkuang not initialized
        public List<Integer> datiqingkuang;
                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/interpreter/InterpreterTest.java:71: error: [NullAway] parameter var is @NonNull, but parameter in superclass method yeah.cstriker1407.design_patterns.interpreter.Expression.interpreter(java.util.HashMap<java.lang.String,java.lang.Integer>) is @Nullable
    public int interpreter(HashMap<String, Integer> var) {
                                                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/interpreter/InterpreterTest.java:72: error: [NullAway] unboxing of a @Nullable value
        return var.get(key);
                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/interpreter/InterpreterTest.java:95: error: [NullAway] parameter var is @NonNull, but parameter in superclass method yeah.cstriker1407.design_patterns.interpreter.Expression.interpreter(java.util.HashMap<java.lang.String,java.lang.Integer>) is @Nullable
    public int interpreter(HashMap<String, Integer> var) {
                                                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/interpreter/InterpreterTest.java:107: error: [NullAway] parameter var is @NonNull, but parameter in superclass method yeah.cstriker1407.design_patterns.interpreter.Expression.interpreter(java.util.HashMap<java.lang.String,java.lang.Integer>) is @Nullable
    public int interpreter(HashMap<String, Integer> var) {
                                                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/mediator/AbstractMediator.java:12: error: [NullAway] initializer method does not guarantee @NonNull fields purchase (line 5), sale (line 7), stock (line 9) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public AbstractMediator() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/builder/BuilderTest.java:84: error: [NullAway] parameter isAlarm is @NonNull, but parameter in superclass method yeah.cstriker1407.design_patterns.builder.CarBuilder.setAlarm(boolean) is @Nullable
    public void setAlarm(boolean isAlarm) {
                                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/builder/BuilderTest.java:99: error: [NullAway] parameter isAlarm is @NonNull, but parameter in superclass method yeah.cstriker1407.design_patterns.builder.CarBuilder.setAlarm(boolean) is @Nullable
    public void setAlarm(boolean isAlarm) {
                                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/factory/simplefactory/Simplefactory1.java:12: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/responsechain/ResponsechainTest.java:25: error: [NullAway] parameter target is @NonNull, but parameter in superclass method yeah.cstriker1407.design_patterns.responsechain.ChainHandler.showInfo(int) is @Nullable
    protected void showInfo(int target) {
                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/responsechain/ResponsechainTest.java:37: error: [NullAway] parameter target is @NonNull, but parameter in superclass method yeah.cstriker1407.design_patterns.responsechain.ChainHandler.showInfo(int) is @Nullable
    protected void showInfo(int target) {
                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/responsechain/ResponsechainTest.java:49: error: [NullAway] parameter target is @NonNull, but parameter in superclass method yeah.cstriker1407.design_patterns.responsechain.ChainHandler.showInfo(int) is @Nullable
    protected void showInfo(int target) {
                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:26: error: [NullAway] @NonNull static field currentLiftState not initialized
    public static ILiftState currentLiftState;
                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/facade/FacadeTest.java:24: error: [NullAway] parameter str is @NonNull, but parameter in superclass method yeah.cstriker1407.design_patterns.facade.LetterPost.write(java.lang.String) is @Nullable
    public void write(String str) {
                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/facade/FacadeTest.java:29: error: [NullAway] parameter addresss is @NonNull, but parameter in superclass method yeah.cstriker1407.design_patterns.facade.LetterPost.send(java.lang.String) is @Nullable
    public void send(String addresss) {
                            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/facade/FacadeTest.java:39: error: [NullAway] parameter str is @NonNull, but parameter in superclass method yeah.cstriker1407.design_patterns.facade.LetterPost.write(java.lang.String) is @Nullable
        public void write(String str) {
                                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/facade/FacadeTest.java:44: error: [NullAway] parameter addresss is @NonNull, but parameter in superclass method yeah.cstriker1407.design_patterns.facade.LetterPost.send(java.lang.String) is @Nullable
        public void send(String addresss) {
                                ^
    (see http://t.uber.com/nullaway )
Note: ../nullgtn/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/observe/ObserveTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
18 errors
